--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -28,15 +28,15 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/sceyt_item_input_image_attachment" />
 
-    <include
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/layoutReplyOrEditMessage"
-        layout="@layout/sceyt_reply_edit_message_container"
+        android:name="com.sceyt.sceytchatuikit.presentation.uicomponents.messageinput.fragments.EditOrReplyMessageFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvAttachments" />
+        app:layout_constraintTop_toBottomOf="@+id/rvAttachments"/>
 
     <View
         android:id="@+id/view3"
@@ -136,7 +136,7 @@
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/layoutCloseInput"
