--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -38,6 +38,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/rvAttachments"/>
 
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/layoutLinkPreview"
+        android:name="com.sceyt.sceytchatuikit.presentation.uicomponents.messageinput.fragments.LinkPreviewFragment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rvAttachments"/>
+
     <View
         android:id="@+id/view3"
         android:layout_width="match_parent"
@@ -51,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:paddingVertical="12dp"
-        app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage">
+        app:layout_constraintTop_toBottomOf="@+id/layoutLinkPreview">
 
         <com.sceyt.sceytchatuikit.presentation.uicomponents.messageinput.mention.MentionSupportEditText
             android:id="@+id/messageInput"
