--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_input_view.xml
@@ -46,7 +46,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rvAttachments"/>
+        app:layout_constraintTop_toBottomOf="@+id/layoutReplyOrEditMessage"/>
 
     <View
         android:id="@+id/view3"
