--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
@@ -13,6 +13,7 @@
         android:visibility="gone"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerTop17Bottom5"
