Added logic to show link preview in chat list and ConversationInfoPage.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:background="@color/sceyt_color_gray_themed"
     android:clipToPadding="false"
-    android:paddingVertical="10dp"
-    android:paddingHorizontal="16dp">
+    android:paddingHorizontal="16dp"
+    android:paddingVertical="10dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icLinkImage"
@@ -32,7 +32,6 @@
         android:textColor="@color/colorAccent"
         android:textSize="13sp"
         app:layout_constrainedWidth="true"
-        app:layout_constraintBottom_toTopOf="@+id/tvLinkDescription"
         app:layout_constraintEnd_toStartOf="@+id/icClose"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
