--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
@@ -24,14 +24,13 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvLinkUrl"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:ellipsize="end"
         android:singleLine="true"
         android:textColor="@color/colorAccent"
         android:textSize="13sp"
-        app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@+id/icClose"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
@@ -41,7 +40,7 @@
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/tvLinkDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="4dp"
@@ -49,15 +48,11 @@
         android:singleLine="true"
         android:textColor="@color/sceyt_color_gray_secondary"
         android:textSize="13sp"
-        android:visibility="gone"
-        app:layout_constrainedWidth="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/icClose"
-        app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toEndOf="@+id/icLinkImage"
         app:layout_constraintTop_toBottomOf="@+id/tvLinkUrl"
-        tools:text="Become a Partner &amp; get access to opportunities to grow your business."
-        tools:visibility="visible" />
+        tools:text="Become a Partner &amp; get access to opportunities to grow your business." />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/icClose"
