Refactored UI to show link preview. Done improvements and bug fixes.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parentLayout"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/sceyt_bg_corners_8"
+    android:paddingBottom="8dp"
+    tools:background="#E3E7FF">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/previewImage"
@@ -18,7 +21,7 @@
         app:layout_constraintHeight_max="300dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerTop17Bottom5"
+        app:shapeAppearanceOverlay="@style/SceytShapeAppearanceOverlay.CornerTop8Bottom4"
         tools:src="@tools:sample/backgrounds/scenic"
         tools:visibility="visible" />
 
@@ -45,8 +48,8 @@
         android:id="@+id/tvLinkTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginTop="8dp"
         android:ellipsize="end"
         android:fontFamily="@font/roboto_medium"
         android:maxLines="2"
@@ -63,7 +66,7 @@
         android:id="@+id/tvLinkDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
+        android:layout_marginHorizontal="8dp"
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="3"
