--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_link.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_link.xml
@@ -2,5 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/sceyt_color_bg" />
     <corners android:radius="8dp" />
-    <stroke android:width="1dp" android:color="@color/sceyt_color_divider" />
+    <stroke
+        android:width=".5dp"
+        android:color="@color/sceyt_color_divider" />
 </shape>
