--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_or_reply_message.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    tools:visibility="visible">
 
     <View
         android:id="@+id/view3"
