--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_link_preview.xml
@@ -7,7 +7,9 @@
     android:background="@color/sceyt_color_gray_themed"
     android:clipToPadding="false"
     android:paddingHorizontal="16dp"
-    android:paddingVertical="10dp">
+    android:paddingVertical="10dp"
+    android:visibility="gone"
+    tools:visibility="visible">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/icLinkImage"
