--- a/SceytChatUiKit/src/main/res/layout/sceyt_channel_list_empty_state.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_channel_list_empty_state.xml
@@ -15,15 +15,13 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/appCompatImageView2"
             themedDrawable="@{R.drawable.sceyt_ic_channels_empty_state}"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:layout_constraintWidth_percent=".5"
             app:srcCompat="@drawable/sceyt_ic_channels_empty_state" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -32,7 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="12dp"
             android:text="@string/sceyt_no_channels"
             android:textColor="@color/sceyt_color_black_themed"
             android:textSize="@dimen/largeTextSize"
@@ -48,7 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="30dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/sceyt_empty_channels_description"
             android:textColor="@color/sceyt_color_gray_400"
