--- a/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/fragment_profile.xml
@@ -73,98 +73,145 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
+            themedBackgroundColor="@{R.color.sceyt_color_bg_secondary_themed}"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
+            android:layout_height="0dp"
+            android:background="@color/sceyt_color_bg_secondary_themed"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/underline">
 
-            <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
-                android:id="@+id/avatar"
-                android:layout_width="72dp"
-                android:layout_height="72dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
-                app:sceytAvatarViewTextSize="@dimen/extraLargeTextSize"
-                tools:sceytAvatarViewFullName="User name" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/icEditPhoto"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_gravity="center"
-                android:background="@drawable/sceyt_bg_circle"
-                android:backgroundTint="#60E3E7FF"
-                android:scaleType="centerCrop"
-                android:padding="20dp"
-                app:layout_constraintBottom_toBottomOf="@+id/avatar"
-                app:layout_constraintEnd_toEndOf="@+id/avatar"
-                app:layout_constraintStart_toStartOf="@id/avatar"
-                app:layout_constraintTop_toTopOf="@id/avatar"
-                app:srcCompat="@drawable/sceyt_ic_camera" />
-
-            <ProgressBar
-                android:id="@+id/loadingProfileImage"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/avatar"
-                app:layout_constraintEnd_toEndOf="@+id/avatar"
-                app:layout_constraintStart_toStartOf="@+id/avatar"
-                app:layout_constraintTop_toTopOf="@+id/avatar" />
-
-            <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/displayName"
-                themedTextColor="@{R.color.sceyt_color_black_themed}"
-                android:layout_width="0dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/layoutUserDetails"
+                themedBackgroundColor="@{R.color.sceyt_color_bg}"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:ellipsize="end"
-                android:fontFamily="@font/roboto_medium"
-                android:hint="@string/display_name"
-                android:inputType="textPersonName"
-                android:maxLines="2"
-                android:textColor="@color/sceyt_color_text_themed"
-                android:textColorHint="@color/sceyt_color_hint"
-                android:textSize="@dimen/bigTextSize"
-                app:layout_constraintBottom_toBottomOf="@+id/avatar"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/avatar"
-                app:layout_constraintTop_toTopOf="@+id/avatar" />
+                android:background="@color/sceyt_color_bg"
+                android:padding="16dp"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
+                    android:id="@+id/avatar"
+                    android:layout_width="72dp"
+                    android:layout_height="72dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:sceytAvatarDefaultIcon="@drawable/sceyt_ic_default_avatar"
+                    app:sceytAvatarViewTextSize="@dimen/extraLargeTextSize"
+                    tools:sceytAvatarViewFullName="User name" />
+
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/icEditPhoto"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/sceyt_bg_circle"
+                    android:backgroundTint="#60E3E7FF"
+                    android:padding="20dp"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                    app:layout_constraintEnd_toEndOf="@+id/avatar"
+                    app:layout_constraintStart_toStartOf="@id/avatar"
+                    app:layout_constraintTop_toTopOf="@id/avatar"
+                    app:srcCompat="@drawable/sceyt_ic_camera" />
+
+                <ProgressBar
+                    android:id="@+id/loadingProfileImage"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:visibility="gone"
+                    app:layout_constraintBottom_toBottomOf="@+id/avatar"
+                    app:layout_constraintEnd_toEndOf="@+id/avatar"
+                    app:layout_constraintStart_toStartOf="@+id/avatar"
+                    app:layout_constraintTop_toTopOf="@+id/avatar" />
+
+                <androidx.appcompat.widget.AppCompatEditText
+                    android:id="@+id/displayName"
+                    themedTextColor="@{R.color.sceyt_color_black_themed}"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:ellipsize="end"
+                    android:background="@drawable/bg_edit_text_small_bottom_padding"
+                    android:paddingVertical="5dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:hint="@string/display_name"
+                    android:includeFontPadding="false"
+                    android:inputType="textPersonName"
+                    android:maxLines="2"
+                    android:textColor="@color/sceyt_color_text_themed"
+                    android:textColorHint="@color/sceyt_color_hint"
+                    android:textSize="@dimen/bigTextSize"
+                    app:layout_constraintBottom_toTopOf="@+id/tvStatus"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/avatar"
+                    app:layout_constraintTop_toTopOf="@+id/avatar"
+                    app:layout_constraintVertical_chainStyle="packed"
+                    android:text="sdfsdfsffdg"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="12dp"
+                    android:lines="1"
+                    android:text="@string/sceyt_online"
+                    android:textColor="@color/sceyt_color_gray_800"
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="@id/avatar"
+                    app:layout_constraintHorizontal_bias="0"
+                    app:layout_constraintStart_toEndOf="@id/avatar"
+                    app:layout_constraintTop_toBottomOf="@+id/displayName" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchNotifications"
-                themedBackgroundTintColor="@{R.color.sceyt_color_divider}"
+                themedBackgroundColor="@{R.color.sceyt_color_bg}"
                 themedTextColor="@{R.color.sceyt_color_text_themed}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:background="@drawable/sceyt_bg_top_bottom_lines"
-                android:backgroundTint="@color/sceyt_color_divider"
-                android:drawableStart="@drawable/sceyt_ic_notification_on"
+                android:layout_marginTop="16dp"
+                android:background="@color/sceyt_color_bg"
+                android:drawableStart="@drawable/sceyt_ic_notification"
                 android:drawablePadding="12dp"
                 android:includeFontPadding="false"
-                android:text="@string/sceyt_mute_notifications"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="12dp"
+                android:text="@string/sceyt_notifications"
                 android:textColor="@color/sceyt_color_text_themed"
                 android:textSize="@dimen/mediumTextSize"
                 android:theme="@style/SceytSwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/avatar" />
+                app:layout_constraintTop_toBottomOf="@id/layoutUserDetails" />
+
+            <View
+                android:id="@+id/divider"
+                themedBackgroundColor="@{R.color.sceyt_color_divider}"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/sceyt_color_divider"
+                app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switchTheme"
+                themedBackgroundColor="@{R.color.sceyt_color_bg}"
                 themedTextColor="@{R.color.sceyt_color_black_themed}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
+                android:background="@color/sceyt_color_bg"
+                android:drawableStart="@drawable/ic_theme"
+                android:drawablePadding="12dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="12dp"
                 android:text="@string/dark_theme"
                 android:textColor="@color/sceyt_color_black_themed"
                 android:textSize="@dimen/mediumTextSize"
                 android:theme="@style/SceytSwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/switchNotifications" />
+                app:layout_constraintTop_toBottomOf="@+id/divider" />
 
             <View
                 themedBackgroundColor="@{R.color.sceyt_color_divider}"
@@ -175,16 +222,21 @@
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/signOut"
+                themedBackgroundColor="@{R.color.sceyt_color_bg}"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="14dp"
-                android:paddingVertical="10dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/sceyt_color_bg"
+                android:foreground="?android:selectableItemBackground"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="16dp"
                 android:text="@string/sign_out"
                 android:textColor="@color/sceyt_color_red"
                 android:textSize="@dimen/mediumTextSize"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@id/switchNotifications"
-                app:layout_constraintTop_toBottomOf="@id/switchTheme" />
+                app:layout_constraintTop_toBottomOf="@id/switchTheme"
+                tools:ignore="UnusedAttribute" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
