Improved UI and logic to mote notifications in ProfileFragment.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_mute_notifications.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_mute_notifications.xml
@@ -6,6 +6,7 @@
     android:paddingVertical="10dp">
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/tvTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="18dp"
