--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="sceyt_color_status_bar">#33000000</color>
     <color name="sceyt_color_bottom_nav">#ffffff</color>
 
+    <color name="sceyt_color_white_themed">#FFFFFF</color>
     <color name="sceyt_color_black_themed">#FF000000</color>
 
     <color name="sceyt_color_bg">#FFFFFF</color>
@@ -22,7 +23,6 @@
     <color name="sceyt_color_dialog_bg_themed">#FFFFFF</color>
     <color name="sceyt_color_light_themed">#FFFFFFFF</color>
     <color name="sceyt_color_gray_themed">#E8E9EE</color>
-    <color name="sceyt_color_image_bg_themed">#E8E9EE</color>
 
     // Not themed colors
     <color name="colorAccent">#5159F6</color>
@@ -45,6 +45,5 @@
     <color name="sceyt_self_reaction_color">#4BBEFD</color>
     <color name="sceyt_auto_link_color">#438CED</color>
     <color name="sceyt_media_primary_color">#CC000000</color>
-    <color name="sceyt_color_acceent_light_transparent">#80FFFFFF</color>
 
 </resources>
