--- a/examples/SceytDemoApp/src/main/res/layout/activity_main.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
 
     <data>
 
-        <import type="com.sceyt.sceytchatuikit.R" />
+        <import type="com.sceyt.chat.demo.R" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/con"
-        themedBackgroundColor="@{R.color.sceyt_color_bg}"
+        themedBackgroundColor="@{com.sceyt.sceytchatuikit.R.color.sceyt_color_bg}"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/sceyt_color_bg"
@@ -26,10 +26,10 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
-            themedBackgroundColor="@{R.color.sceyt_color_bottom_nav}"
+            themedBackgroundColor="@{R.color.color_bottom_nav}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/sceyt_color_bottom_nav"
+            android:background="@color/color_bottom_nav"
             app:elevation="10dp"
             app:itemIconSize="28dp"
             app:itemIconTint="@color/bottom_nav_item_color"
