--- a/examples/SceytDemoApp/src/main/res/values/colors.xml
+++ b/examples/SceytDemoApp/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="color_bottom_nav">#ffffff</color>
+
 </resources>
