Dark theme Ui colors refactoring. Bug fix and improvements connected with dark theme.

--- a/SceytChatUiKit/src/main/res/drawable/sceyt_ic_arrow_up.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_ic_arrow_up.xml
@@ -1,24 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="22dp"
-    android:height="22dp"
-    android:viewportWidth="22"
-    android:viewportHeight="22">
-  <path
-      android:pathData="M6.417,10.083L11,5.5L15.583,10.083"
-      android:strokeAlpha="0.8"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#4F6AFF"
-      android:fillAlpha="0.8"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M6.417,16.5L11,11.917L15.583,16.5"
-      android:strokeAlpha="0.4"
-      android:strokeLineJoin="round"
-      android:strokeWidth="1.4"
-      android:fillColor="#00000000"
-      android:strokeColor="#4F6AFF"
-      android:fillAlpha="0.4"
-      android:strokeLineCap="round"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#ffffff"
+        android:fillType="evenOdd"
+        android:pathData="M11.364,2.363C11.715,2.012 12.285,2.012 12.636,2.363L19.636,9.363C19.988,9.715 19.988,10.285 19.636,10.636C19.285,10.988 18.715,10.988 18.364,10.636L12.9,5.172V21C12.9,21.497 12.497,21.9 12,21.9C11.503,21.9 11.1,21.497 11.1,21V5.172L5.636,10.636C5.285,10.988 4.715,10.988 4.364,10.636C4.012,10.285 4.012,9.715 4.364,9.363L11.364,2.363Z" />
 </vector>
