Fix dark mode in forward and share pages.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_member.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_member.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingHorizontal="14dp"
-    android:background="?selectableItemBackground">
+    android:background="?selectableItemBackground"
+    android:paddingHorizontal="14dp">
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
@@ -15,6 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarEnableRipple="false"
         app:sceytAvatarViewFullName="Art d"
         app:sceytAvatarViewTextSize="15sp" />
 
