--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_share_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_share_channel.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/sceyt_bg_underline"
     android:paddingHorizontal="17dp">
 
     <androidx.appcompat.widget.AppCompatCheckBox
@@ -25,6 +26,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/checkbox"
         app:layout_constraintTop_toTopOf="parent"
+        app:sceytAvatarEnableRipple="false"
         app:sceytAvatarViewFullName="Art d"
         app:sceytAvatarViewTextSize="15sp" />
 
