--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_share.xml
@@ -10,6 +10,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/sceyt_color_primary"
         app:layout_constraintTop_toTopOf="parent"
         app:sceytSearchableToolbarTitle="@string/sceyt_share_with" />
 
@@ -18,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:paddingVertical="10dp"
+        android:paddingBottom="10dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toTopOf="@+id/messageInput"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
