--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_inc_file_message.xml
@@ -5,15 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <View
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircleCheckBox
         android:id="@+id/selectView"
         android:layout_width="22dp"
         android:layout_height="22dp"
-        android:background="@drawable/sceyt_custom_radiobutton_view"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
         android:id="@+id/avatar"
