--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_deleted_message.xml
@@ -7,13 +7,12 @@
     android:paddingStart="0dp"
     android:paddingEnd="12dp">
 
-    <View
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircleCheckBox
         android:id="@+id/selectView"
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_gravity="center_vertical"
         android:alpha=".3"
-        android:background="@drawable/sceyt_custom_radiobutton_view"
         android:clickable="false"
         android:visibility="gone" />
 
