--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_link_message.xml
@@ -7,11 +7,10 @@
     android:paddingStart="0dp"
     android:paddingEnd="12dp">
 
-    <View
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircleCheckBox
         android:id="@+id/selectView"
         android:layout_width="22dp"
         android:layout_height="22dp"
-        android:background="@drawable/sceyt_custom_radiobutton_view"
         android:clickable="false"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,12 +89,12 @@
             android:textColor="@color/sceyt_color_text_themed"
             android:textSize="@dimen/mediumTextSize"
             app:layout_constrainedWidth="true"
-            app:layout_constraintVertical_bias="0"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/layoutDetails"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/layoutDetails"
             app:layout_constraintTop_toBottomOf="@+id/viewReply"
+            app:layout_constraintVertical_bias="0"
             tools:text="https://www.sceyt.com" />
 
         <ViewStub
