--- a/examples/SceytDemoApp/src/main/res/layout/item_select_user.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/item_select_user.xml
@@ -5,11 +5,10 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="12dp">
 
-    <androidx.appcompat.widget.AppCompatCheckBox
+    <com.sceyt.sceytchatuikit.presentation.customviews.SceytCircleCheckBox
         android:id="@+id/checkbox"
         android:layout_width="22dp"
         android:layout_height="22dp"
-        android:button="@drawable/sceyt_custom_radiobutton"
         android:clickable="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
