Start creating logic message search.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_details.xml
@@ -65,7 +65,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Space
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
