--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_settings.xml
@@ -51,7 +51,7 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-    <Space
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
