--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_specifications.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_specifications.xml
@@ -23,7 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="link" />
 
-    <Space
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
