--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_info_description.xml
@@ -50,7 +50,7 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <Space
+    <View
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="16dp"
