Added logic to pin channel.

--- a/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_dialog_channel_actions.xml
@@ -20,9 +20,7 @@
         android:paddingVertical="10dp"
         android:text="@string/sceyt_pin_chat"
         android:textColor="@color/sceyt_color_text_themed"
-        android:textSize="@dimen/_12ssp"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        android:textSize="@dimen/_12ssp" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/unPin"
