--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel.xml
@@ -14,6 +14,16 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground">
 
+        <View
+            android:id="@+id/viewPinned"
+            themedBackgroundColor="@{R.color.sceyt_color_gray_themed}"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/sceyt_color_gray_themed"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.sceyt.sceytchatuikit.presentation.customviews.SceytAvatarView
             android:id="@+id/avatar"
             android:layout_width="@dimen/_45sdp"
@@ -66,17 +76,17 @@
             themedSpannableTextColor="@{true}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAlignment="viewStart"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="10dp"
             android:ellipsize="end"
             android:includeFontPadding="false"
             android:lines="2"
             android:maxLines="2"
+            android:textAlignment="viewStart"
             android:textColor="@color/sceyt_color_gray_400"
             android:textSize="@dimen/smallTextSize"
             app:layout_constrainedWidth="true"
-            app:layout_constraintEnd_toStartOf="@+id/icMention"
+            app:layout_constraintEnd_toStartOf="@+id/icPinned"
             app:layout_constraintHorizontal_bias="0"
             app:layout_constraintStart_toStartOf="@+id/channelTitle"
             app:layout_constraintTop_toBottomOf="@+id/channelTitle"
@@ -107,6 +117,18 @@
             app:sceytDateStatusViewStatusIconSize="16dp"
             tools:sceytDateStatusViewDateText="12:28"
             tools:sceytDateStatusViewStatusIcon="@drawable/sceyt_ic_status_delivered" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/icPinned"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="8dp"
+            android:visibility="gone"
+            app:layout_constraintEnd_toStartOf="@+id/icMention"
+            app:layout_constraintTop_toBottomOf="@+id/dateStatus"
+            app:srcCompat="@drawable/sceyt_ic_pin_filled"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/icMention"
