Add logic to set empty self channel state.

--- a/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
+++ b/SceytChatUiKit/src/main/res/values/sceyt_attrs_message.xml
@@ -38,8 +38,11 @@
             <flag name="italic" value="2" />
         </attr>
 
-        <attr name="sceytUiAutoLinkTextColor" format="reference" />
+        <!--Empty state-->
+        <attr name="sceytUiEmptyStateLayout" format="reference" />
+        <attr name="sceytUiEmptyStateSelfChannelLayout" format="reference" />
 
+        <attr name="sceytUiAutoLinkTextColor" format="reference" />
 
         <!--Distance between messages-->
         <attr name="sceytUiSameSenderMessageDistance" format="dimension" />
